Minor update to README
git-svn-id: https://trip-ng.googlecode.com/svn/trunk@4 d5485f00-391e-ac97-d343-b48165702b25

--- a/README
+++ b/README
@@ -3,4 +3,6 @@ TRipNG
 A highly flexible Python application for ripping, encoding and tagging
 one's music library collection.
 
+Further details will be forthcoming.
+
 [8/11/2011] Souce code will be available soon.
