Wax prose a little.
git-svn-id: https://trip-ng.googlecode.com/svn/trunk@5 d5485f00-391e-ac97-d343-b48165702b25

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 TRipNG
 
 A highly flexible Python application for ripping, encoding and tagging
-one's music library collection.
+one's music library collection; TRipNG is the successor to the Perl program
+'trip', but has several new features and more extensive capabilities.
 
 Further details will be forthcoming.
 
