Minor update regarding code restructure.

--- a/README
+++ b/README
@@ -6,4 +6,4 @@ one's music library collection; TRipNG is the successor to the Perl program
 
 Further details will be forthcoming.
 
-[8/11/2011] Souce code will be available soon.
+[2014/05/17] Updated layout, initial barebones code.
